--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Manage your Money Easily",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www",
+    "local": "nodemon ./bin/www",
+    "test": "cross-env NODE_ENV=test jest controller.spec.js --testTimeout=1000000",
+    "pretest": "cross-env NODE_ENV=test npm run db:reset",
+    "db:reset": "sequelize db:drop && sequelize db:create && sequelize db:migrate && sequelize db:seed:all",
+    "db:create:test": "cross-env NODE_ENV=test sequelize db:create"
   },
   "repository": {
     "type": "git",
@@ -15,5 +20,28 @@
   "bugs": {
     "url": "https://github.com/C22-017/Maneyfy-BackEnd/issues"
   },
-  "homepage": "https://github.com/C22-017/Maneyfy-BackEnd#readme"
+  "homepage": "https://github.com/C22-017/Maneyfy-BackEnd#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cloudinary": "^1.30.0",
+    "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-validator": "^6.14.1",
+    "fs": "^0.0.1-security",
+    "jest": "^28.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.5",
+    "passport": "^0.6.0",
+    "passport-anonymous": "^1.0.1",
+    "passport-jwt": "^4.0.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.20.1",
+    "supertest": "^6.2.3"
+  }
 }
