--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "node ./bin/www",
     "local": "nodemon ./bin/www",
-    "test": "cross-env NODE_ENV=test jest controller.spec.js --testTimeout=1000000",
     "pretest": "cross-env NODE_ENV=test npm run db:reset",
     "db:reset": "sequelize db:drop && sequelize db:create && sequelize db:migrate && sequelize db:seed:all",
-    "db:create:test": "cross-env NODE_ENV=test sequelize db:create"
+    "db:create:test": "cross-env NODE_ENV=test sequelize db:create",
+    "test": "cross-env NODE_ENV=test jest controller.spec.js --testTimeout=1000000"
   },
   "repository": {
     "type": "git",
