--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./bin/www",
     "local": "nodemon ./bin/www",
     "pretest": "cross-env NODE_ENV=test npm run db:reset",
+    "preprod": "cross-env NODE_ENV=production npm run db:reset",
     "db:reset": "sequelize db:drop && sequelize db:create && sequelize db:migrate && sequelize db:seed:all",
     "db:create:test": "cross-env NODE_ENV=test sequelize db:create",
     "test": "cross-env NODE_ENV=test jest controller.spec.js --testTimeout=1000000"
